src/test/ui/error-codes/E0606.rs
fn main() {
    &0u8 as u8; //~ ERROR E0606
}
